# CFDpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
Equation/: AdvectionEquation.hpp  Burgers.cpp  Burgers.hpp  BurgersEqn.cpp  BurgersEqn.hpp  Equation.hpp  SolveBurgers.cpp  SolveBurgers.hpp
Fields/: CellScalarField.hpp  FaceScalarField.hpp  ScalarField.hpp
Geometry/: Cell.cpp  Cell.hpp  Domain.cpp  Domain.hpp  Face.cpp  Face.hpp  Geo.cpp  Geo.hpp  GeoComplex.cpp  GeoComplex.hpp  Geometry.hpp  Mesh.cpp  Mesh.hpp  Node.cpp  Node.hpp
LinearAlgebra/: CGSolver.hpp  CsrSystem.cpp  CsrSystem.hpp  EigenSolve.cpp  EigenSolve.hpp  LinSolverType.hpp  LinearSolver.hpp  LinearSystem.hpp  PetscCsrSolve.cpp  PetscCsrSolve.hpp  ThomasSolver.hpp  TridiagonalSystem.cpp  TridiagonalSystem.hpp  TripletSystem.cpp  TripletSystem.hpp
Solver/: Scalar.cpp  Scalar.hpp  Solution.hpp
Utilities/: Constants.hpp  Expressions.hpp  Types.hpp
src/: main.cpp
tests/: CMakeLists.txt  TestCsrSystem.cpp  TestMesh.cpp
